--- a/Changes
+++ b/Changes
@@ -6,6 +6,11 @@ Home page:    <https://metacpan.org/release/Alien-LibXML>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Alien-LibXML>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.001  2013-01-02
+
+ - (Documentation) Add better abstract.
+ - (Packaging) Bundle example usage.
+
 0.000_02  2012-11-30
 
  - (Packaging) Include a meaty gcc test in the test suite.
