--- a/Changes
+++ b/Changes
@@ -6,6 +6,14 @@ Home page:    <https://metacpan.org/release/Alien-LibXML>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Alien-LibXML>
 Maintainer:   Toby Inkster (TOBYINK) <tobyink@cpan.org>
 
+0.003	2014-09-16
+
+ [ Packaging ]
+ - Add bug tracker link.
+ - Add homepage link.
+ - Add repo link.
+ - Sign distribution.
+
 0.002	2014-09-16
 
  [ Bug Fixes ]
